--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home Page</title>
+  <title>Sentiment Analysis</title>
+  <link rel="shortcut icon" type="image/png" href="{{url_for('static', filename='logo.png')}}">
   <style>
   *{
       margin:0;
