--- a/templates/about.html
+++ b/templates/about.html
@@ -3,6 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About this Project</title>
+  <link rel="shortcut icon" type="image/png" href="{{url_for('static', filename='icon.png')}}">
   <style>
   *{
   				margin:0;
