--- a/templates/members.html
+++ b/templates/members.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About the creators of this webpage</title>
+  <link rel="shortcut icon" type="image/png" href="{{url_for('static', filename='icon.png')}}">
   <style>
   *{
   				margin:0;
