--- a/templates/index.html
+++ b/templates/index.html
@@ -112,7 +112,7 @@
     <br>
     <br>
     <form method="POST">
-        <input type="text" name="twt" placeholder="Enter text here...">
+        <input type="text" name="twt" placeholder="Enter text here..." autocomplete="off">
         <br>
         <br>
         <input class="submit" type="submit" value="PREDICT">
