--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>About this Project</title>
 	<link rel="shortcut icon" type="image/png" href="{{url_for('static', filename='icon.png')}}">
-	<link rel="stylesheet" href="{{url_for('static', filename = 'css/about.css')}}">
+	<link rel="stylesheet" href="{{url_for('static', filename = 'css/bout.css')}}">
 </head>
 
 <body>
