--- a/templates/show.html
+++ b/templates/show.html
@@ -9,5 +9,6 @@
     <h1>Here is the first 10 rows of you dataset</h1>
     {{% for data in table %}}
         <h2>{{ data.Id }} | {{ data.Text }} | {{ data.Sentiment }}</h2>
+    {{% endfor %}}
 </body>
 </html>
