--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div>
+    <div class="nav">
         <ul>
             <li><a class="active" href="/">Home</a></li>
             <li><a href="/member">Members</a></li>
