--- a/static/css/index.css
+++ b/static/css/index.css
@@ -85,3 +85,7 @@ p {
     padding: 12px;
     text-align: left;
 }
+@media only screen and (max-width: 583px) {
+    .nav {width: 100%;
+    justify-content: space-evenly;}
+}
