--- a/static/css/member.css
+++ b/static/css/member.css
@@ -81,3 +81,7 @@ h4 {
     text-align: left;
     margin-bottom: 0;
 }
+@media only screen and (max-width: 583px) {
+    .list {width: 100%;
+    justify-content: space-between;}
+}
