--- a/templates/canvas.html
+++ b/templates/canvas.html
@@ -7,6 +7,11 @@
     <title>Curves and Representation</title>
     <link rel="shortcut icon" type="image/png" href="{{url_for('static', filename='img/icon.png')}}">
     <style>
+        *{
+            margin: 0%;
+            padding: 0%;
+            box-sizing: border-box;
+        }
         body {
             background: url(https://sentiment-analysis-web-app.herokuapp.com/static/img/bg.jpg);
             background-position: center;
@@ -20,6 +25,9 @@
             width: 100%;
             height: 300px;
         }
+        #head{
+            text-align: center;
+        }
         .container{
             max-width: 700px;
             margin: auto;
@@ -29,6 +37,7 @@
             text-align: center;
             font-family: "Arial Rounded MT Bold";
             float: right;
+            align-items: center;
         }
 
         .nav ul {
@@ -63,19 +72,24 @@
             border: 1px solid #fff;
             margin: 5px;
         }
+        @media only screen and (max-width: 583px) {
+            .nav {width: 100%;
+            justify-content: space-between;}
+        }
     </style>
 </head>
 
 <body>
     <div class="container">
     <div class = nav>
-		<ul>
+		<ul> 
 			<li><a href="/">Home</a></li>
 			<li><a href="/member">Members</a></li>
 			<li><a class="active" href="/about">About</a></li>
 		</ul>
     </div>
-	<h1>Graphs and Curves</h1><br></div>
+    <br>
+	<h1 id="head">Graphs&nbspand&nbspCurves</h1><br></div>
     <hr><br>
     <center style="color: #fff;">
     <h2>Subjectivity and Polarity</h2><br><br><br></center>
