--- a/templates/error404.html
+++ b/templates/error404.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=h, initial-scale=1.0">
     <title>Page Not Found</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/404error.css') }}">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600;900&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" href="{{url_for('static', filename='img/icon.png')}}">
+    <script src="https://kit.fontawesome.com/4b9ba14b0f.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <h1>Page not found </h1>
-    <h3>are you lost</h3>
+    <div class="mainbox">
+        <div class="err">4</div>
+        <i class="far fa-question-circle fa-spin"></i>
+        <div class="err2">4</div>
+        <div class="msg">Maybe this page moved? Got deleted? Is hiding out in quarantine? Never existed in the first
+            place?<p>Let's go <a href="/">home</a> and try from there.</p>
+        </div>
+    </div>
+
 </body>
+
 </html>
