--- a/templates/canvas.html
+++ b/templates/canvas.html
@@ -20,10 +20,10 @@
         .canvas{
             border:2px solid #444444;
             border-radius: 5px;
-            margin-bottom: 20px;
-            /* padding: 10px; */
-            width: 100%;
+            margin-bottom: 20px; 
+            width: 90%;
             height: 300px;
+            margin: auto;
         }
         #head{
             text-align: center;
@@ -72,6 +72,15 @@
             border: 1px solid #fff;
             margin: 5px;
         }
+        .da{
+            width: 90%;
+            margin: auto;
+        }
+        .data{
+            border: 2px solid white;
+            margin: 10px;
+            padding: 5px;
+        }
         @media only screen and (max-width: 583px) {
             .nav {width: 100%;
             justify-content: space-between;}
@@ -93,9 +102,9 @@
     <hr><br>
     <center style="color: #fff;">
     <h2>Subjectivity and Polarity</h2><br><br><br></center>
-    <div class='canvas' id="subjectivity"></div>
-    <div class='canvas' id="polarity"></div><br>
-    <div class='canvas' id="posneg"></div>
+    <div class='canvas' id="subjectivity"></div><br><br>
+    <div class='canvas' id="polarity"></div><br><br>
+    <div class='canvas' id="posneg"></div><br><br>
     <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
     <script>
         window.onload = subject();
