--- a/templates/show.html
+++ b/templates/show.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="vhttps://colorlib.com/etc/tb/Table_Responsive_v1/vendor/animate/animate.css">
     <link rel="stylesheet" type="text/css" href="https://colorlib.com/etc/tb/Table_Responsive_v1/vendor/select2/select2.min.css">
     <link rel="stylesheet" type="text/css" href="https://colorlib.com/etc/tb/Table_Responsive_v1/vendor/perfect-scrollbar/perfect-scrollbar.css">
-    <link rel="stylesheet" type="text/css" href="https://colorlib.com/etc/tb/Table_Responsive_v1/css/main.css">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/show.css')}}">
     <link rel="stylesheet" type="text/css" href="https://colorlib.com/etc/tb/Table_Responsive_v1/css/util.css">
 </head>
 
