fixed static css

--- a/templates/members.html
+++ b/templates/members.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>About the creators of this webpage</title>
 	<link rel="shortcut icon" type="image/png" href="{{url_for('static', filename='img/icon.png')}}">
-	<link rel="stylesheet" href="{{url_for('static', filename='css/member.css')}}">
+	<link rel="stylesheet" href="{{url_for('static', filename='css/members.css')}}">
 </head>
 
 <body>
