--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
     <br>
     <br>
     <form method="POST">
-        <input type="text" name="twt" placeholder="Enter text here..." autocomplete="off">
+        <input type="text" name="twt" placeholder="Enter text here..." autocomplete="off" required autofocus>
         <br>
         <br>
         <input class="submit" type="submit" value="PREDICT">
