changes in upload and app

--- a/static/css/show.css
+++ b/static/css/show.css
@@ -4,10 +4,10 @@
 [ FONT ]*/
 
 
-@font-face {
+/* @font-face {
   font-family: OpenSans-Regular;
-  /*src: url('https://colorlib.com/etc/tb/Table_Responsive_v1/vendor/fonts/OpenSans/OpenSans-Regular.ttf'); */
-}
+  src: url('https://colorlib.com/etc/tb/Table_Responsive_v1/vendor/fonts/OpenSans/OpenSans-Regular.ttf'); 
+} */
 
 
 
