testing ajax for async prediction and small changes in files

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,7 @@
     <h3>{{text}}</h3>
     <br>
     <h3>{{sentiment}}</h3>
+    <h3 id="ans"></h3>
     <br>
     <div class="main">
         <p>Note:</p>
