added missing scripts

--- a/templates/index.html
+++ b/templates/index.html
@@ -49,6 +49,10 @@
     <br>
     <br>
     <br>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    {% if script %}
+        {{script}}
+    {% endif %}
 </body>
 
 </html>
