added session object to save login details updated readme and some minor changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,11 +23,11 @@
     <br>
     <br>
     <br>
-    <form method="POST">
+    <form method="POST" id="form">
         <input type="text" id="text" name="twt" placeholder="Enter text here..." autocomplete="off" required autofocus>
         <br>
         <br>
-        <input class="submit" type="submit" value="PREDICT">
+        <input class="submit" type="submit" value="PREDICT" id="predict">
     </form>
     <br>
     <br>
