added manifest.json for pwa implementation

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <title>Sentiment Analysis</title>
     <link rel="shortcut icon" type="image/png" href="{{url_for('static', filename='img/icon.png')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='css/index.css')}}">
+    <link rel="manifest" href="{{url_for('static', filename='manifest.json')}}">
 </head>
 
 <body>
