--- a/templates/about.html
+++ b/templates/about.html
@@ -1,57 +1,97 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About this Project</title>
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="{{url_for('static', filename='img/icon.png')}}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{url_for('static', filename = 'css/about.css')}}"
+    />
+    <style>
+      ::-webkit-scrollbar {
+        width: 5px;
+      }
 
-<head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>About this Project</title>
-	<link rel="shortcut icon" type="image/png" href="{{url_for('static', filename='img/icon.png')}}">
-	<link rel="stylesheet" href="{{url_for('static', filename = 'css/about.css')}}">
-</head>
+      ::-webkit-scrollbar-track {
+        background: gainsboro;
+        border-radius: 5px;
+      }
 
-<body>
-	<div class="nav">
-		<ul>
-			<li><a href="/">Home</a></li>
-			<li><a href="/member">Members</a></li>
-			<li><a class="active" href="/about">About</a></li>
-		</ul>
-	</div>
-	<br>
-	<h1>About&nbspthis&nbspproject</h1>
-	<br>
-	<hr>
-	<br>
-	<div class="text">
-		<p>The process of computationally identifying and categorizing opinions expressed in a piece of text, especially
-			in order to determine whether the writer's attitude towards a particular topic, product, etc. is positive,
-			negative, or neutral. </p>
-		<br>
-		<p>Sentiment analysis is the interpretation and classification of emotions (positive, negative and neutral)
-			within
-			text data using text analysis techniques. Sentiment analysis allows businesses to identify customer
-			sentiment
-			toward products, brands or services in online conversations and feedback..</p>
-		<br>
-		<p>
-			Sentiment analysis is a text analysis method that detects polarity (e.g. a positive or negative opinion)
-			within
-			text, whether a whole document, paragraph, sentence, or clause.
-		</p>
-		<br>
-		<p>Sentiment analysis is the similar technology used to detect the sentiments of the customers and there are
-			multiple algorithms can be used to build such applications for sentiment analysis. As per the developers and
-			ML
-			experts SVM, Naive Bayes and maximum entropy are best supervised machine learning algorithms.</p>
-		<nav>
-			<ul>
-				<li><a href="https://www.lexalytics.com/technology/sentiment-analysis#machine-learning">Machine
-						Learning</a>
-				</li><br>
-				<li><a href="https://www.lexalytics.com/technology/sentiment-analysis#applications">Applications</a>
-				</li>
-			</ul>
-		</nav>
-	</div>
-</body>
+      ::-webkit-scrollbar-thumb {
+        background: rgb(37, 37, 37);
+        border-radius: 5px;
+      }
 
+      ::-webkit-scrollbar-thumb:hover {
+        background: #555;
+      }
+    </style>
+  </head>
+
+  <body>
+    <div class="nav">
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/member">Members</a></li>
+        <li><a class="active" href="/about">About</a></li>
+      </ul>
+    </div>
+    <br />
+    <h1>About&nbspthis&nbspproject</h1>
+    <br />
+    <hr />
+    <br />
+    <div class="text">
+      <p>
+        The process of computationally identifying and categorizing opinions
+        expressed in a piece of text, especially in order to determine whether
+        the writer's attitude towards a particular topic, product, etc. is
+        positive, negative, or neutral.
+      </p>
+      <br />
+      <p>
+        Sentiment analysis is the interpretation and classification of emotions
+        (positive, negative and neutral) within text data using text analysis
+        techniques. Sentiment analysis allows businesses to identify customer
+        sentiment toward products, brands or services in online conversations
+        and feedback..
+      </p>
+      <br />
+      <p>
+        Sentiment analysis is a text analysis method that detects polarity (e.g.
+        a positive or negative opinion) within text, whether a whole document,
+        paragraph, sentence, or clause.
+      </p>
+      <br />
+      <p>
+        Sentiment analysis is the similar technology used to detect the
+        sentiments of the customers and there are multiple algorithms can be
+        used to build such applications for sentiment analysis. As per the
+        developers and ML experts SVM, Naive Bayes and maximum entropy are best
+        supervised machine learning algorithms.
+      </p>
+      <nav>
+        <ul>
+          <li>
+            <a
+              href="https://www.lexalytics.com/technology/sentiment-analysis#machine-learning"
+              >Machine Learning</a
+            >
+          </li>
+          <br />
+          <li>
+            <a
+              href="https://www.lexalytics.com/technology/sentiment-analysis#applications"
+              >Applications</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </body>
 </html>
